# cerberus-skill

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh
.claude/: settings.json
commands/: cerberus-audit.md
examples/: create_agent_spending_account.rs  finalize_lock.rs  recover_orphaned_account.rs  use_spending_limit.rs
references/: verification-checklist.md
skill/: SKILL.md  common-errors.md  partial-failure-recovery.md  squads-bootstrap-pattern.md  tiered-auto-approval.md  why-database-limits-fail.md
src/: attack_sim.rs  banner.rs  cli.rs  error.rs  lib.rs  lock.rs  recover.rs  spending_account.rs  verify.rs
tests/: devnet_e2e.rs
